feat: Set up User Entity and Database Schema

--- a/.env.development
+++ b/.env.development
@@ -47,3 +47,29 @@ SUPPORT_EMAIL=support@example.com
 # Password hashing salt rounds (10-20, higher = more secure but slower)
 # 12 rounds is recommended for balanced security/performance
 PASSWORD_SALT_ROUNDS=12
+
+# Database Configuration
+# PostgreSQL connection settings for development
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_DATABASE=spending_tracker
+
+# Database Connection Pool Settings
+# These values are optimized for development
+DB_POOL_MAX=10
+DB_POOL_MIN=2
+DB_POOL_IDLE_TIMEOUT=30000
+DB_CONNECTION_TIMEOUT=10000
+
+# Database Operation Settings
+# Run migrations automatically on startup in development
+DB_RUN_MIGRATIONS=false
+DB_RETRY_ATTEMPTS=3
+DB_RETRY_DELAY=3000
+
+# Database SSL Configuration
+# SSL is typically not needed for local development
+DB_SSL=false
+DB_SSL_REJECT_UNAUTHORIZED=false
